# synapse-gateway

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.es-ES.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/scripts/: bump-and-release.sh
.github/workflows/: bump-synapse-context.yml  bump-synapse-gateway.yml  bump-synapse-mcp.yml  bump-synapse-proxy.yml  ci.yml  release-libs.yml  release.yml
.superpowers/sdd/briefs/: task-3-report.md
_docs/: embeddings.md  monitoring.md  synapse-gateway-dashboard.json
config/: pricing.toml  routes.toml
crates/synapse-context/: CHANGELOG.md  Cargo.toml
crates/synapse-gateway/: CHANGELOG.md  Cargo.toml
crates/synapse-gateway/src/ledger/: pubsub.rs
crates/synapse-mcp/: CHANGELOG.md  Cargo.toml
crates/synapse-mcp/src/: gateway.rs  lib.rs  registry.rs
crates/synapse-mcp/tests/: gateway_roundtrip.rs  rmcp_spike.rs
crates/synapse-proxy/: CHANGELOG.md  Cargo.toml
crates/synapse-proxy/src/: context.rs  main.rs
src/: config.rs  error.rs  gateway.rs  lib.rs  main.rs  observability.rs  pricing.rs  resilience.rs  server.rs  vertex_native.rs
src/embeddings/: mod.rs  openai.rs
src/ledger/: event.rs  mod.rs
src/providers/: mod.rs  vertex_auth.rs
src/routing/: classify.rs  executor.rs  mod.rs  request.rs  table.rs
tests/: chat_completions.rs  ledger_sqlite.rs
